// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns "undefined" if no middle cell between two identical exist 1`] = `undefined`;

exports[`returns "undefined" if no middle cell between two identical exist 2`] = `undefined`;

exports[`returns "undefined" if no middle cell between two identical exist 3`] = `undefined`;

exports[`returns "undefined" if no middle cell between two identical exist 4`] = `undefined`;

exports[`selects middle cell between two identical 1`] = `1`;

exports[`selects middle cell between two identical 2`] = `
[⬜] [⬜] [⬜] [⬜]
[🟥] {⬜} [🟥] [⬜]
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects middle cell between two identical 3`] = `1`;

exports[`selects middle cell between two identical 4`] = `
[⬜] [⬜] [⬜] [⬜]
[⬜] [🟥] {⬜} [🟥]
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects middle cell between two identical 5`] = `0`;

exports[`selects middle cell between two identical 6`] = `
[⬜] [🟥] [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
[⬜] [🟥] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects middle cell between two identical 7`] = `0`;

exports[`selects middle cell between two identical 8`] = `
[⬜] [⬜] [⬜] [⬜]
[⬜] [🟥] [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
[⬜] [🟥] [⬜] [⬜]
`;
